--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
 </head>
 
 <body>
+
+  <header>
+
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#"><span class="text-light bg-primary p-2">Speed</span>
+          <span>Monster</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active fw-bold" aria-current="page" href="index.html">Speed check</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link text-dark fw-bold me-2" href="blog.html">Blog</a>
+            </li>
+            <img style="width: 50px;" src="1.webp" alt="">
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <hr class="solid">
+  </header>
+
   <h1 class="title"><img src="./logo.png" /></h1>
   <div id="show-time">0 seconds</div>
 
