--- a/index.html
+++ b/index.html
@@ -46,37 +46,37 @@
   <h1 class="title"><img src="./logo.png" /></h1>
   <div id="show-time">0 seconds</div>
 
-  <!-- <div class="box-container"> -->
-  <div id="question"></div>
+  <div class="box-container">
+    <div id="question"></div>
 
-  <div id="display" class="inactive"></div>
+    <div id="display" class="inactive"></div>
 
-  <div class="buttons">
-    <button id="starts">START</button>
-  </div>
+    <div class="buttons">
+      <button id="starts">START</button>
+    </div>
 
-  <div class="divider-container">
-    <div class="line"></div>
-    <h1 class="title2">History</h1>
-    <div class="line"></div>
-  </div>
+    <div class="divider-container">
+      <div class="line"></div>
+      <h1 class="title2">History</h1>
+      <div class="line"></div>
+    </div>
 
-  <div id="histories" class="row row-cols-1 row-cols-md-3 g-4">
+    <div id="histories" class="row row-cols-1 row-cols-md-3 g-4">
 
-  </div>
+    </div>
 
 
-  <div id="countdown"></div>
-  <div id="modal-background" class="hidden"></div>
-  <div id="result" class="hidden"></div>
+    <div id="countdown"></div>
+    <div id="modal-background" class="hidden"></div>
+    <div id="result" class="hidden"></div>
 
-  <script src="./history.js"></script>
-  <script src="./script.js"></script>
+    <script src="./history.js"></script>
+    <script src="./script.js"></script>
 
-  <!-- bootstrap js link  -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"></script>
+    <!-- bootstrap js link  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
